--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.balta.atested.LogoActivity"
+            android:name=".LogoActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -19,8 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.balta.atested.ResumenActivity" />
-        <activity android:name="com.balta.atested.AcercaActivity"></activity>
+        <activity android:name=".ResumenActivity" />
+        <activity android:name=".AcercaActivity" />
+        <activity
+            android:name=".ListadoActivity"
+            android:label="@string/title_activity_listado"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
