Listado de preguntas, anyadir preguntas y snackbar al no rellenar bien el formulario

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         <activity
             android:name=".ListadoActivity"
             android:label="@string/title_activity_listado"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".AnyadirActivity"
+            android:label="@string/title_activity_anyadir"
             android:theme="@style/AppTheme"></activity>
     </application>
 
